# MasterLevelMeter

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json
cmake/macos/: helpers.cmake
cmake/macos/resources/: create-package.cmake.in
src/: level_calc.cpp  level_calc.h
